# Python-RAG-AI-Agent

./: README.md  data_loader.py  databsepy.py  main.py  pyproject.toml  test.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/1b09e846-6434-4e4a-be9c-d113f619e69f/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/501704f0-4ee0-45b6-94d6-b70bc2dea2f0/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/501704f0-4ee0-45b6-94d6-b70bc2dea2f0/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/7687d7b9-9ef0-4a95-a3d7-9ecb4e799db0/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/962c0ebe-b76f-44ac-b7df-450d291b2849/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/b150377e-230d-4b7a-8889-c572be58e230/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/cbae0cae-8cf2-4fa3-b337-e0dc58e4511c/payload_index/: IDENTITY  LOG  MANIFEST-000005
