[project]
name = "rai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.1",
    "inngest>=0.5.11",
    "llama-index>=0.14.8",
    "openai>=2.7.2",
    "pydantic>=2.11.10",
    "qdrant-client>=1.15.1",
    "sniffio>=1.3.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
